--- a/data_structure_2/data_structure_2.vcxproj
+++ b/data_structure_2/data_structure_2.vcxproj
@@ -146,6 +146,9 @@
   <ItemGroup>
     <ClInclude Include="Tree.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
