added 2 new classes

--- a/targil_2/targil_2.vcxproj.filters
+++ b/targil_2/targil_2.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="Client.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HashVolunteer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HashClient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
